tests/ui/de-unit-struct.stderr
error: Unit structs aren't supported by the Deserr derive macro
 --> tests/ui/de-unit-struct.rs:3:10
  |
3 | #[derive(Deserr)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Deserr` (in Nightly builds, run with -Z macro-backtrace for more info)
